--- a/index.html
+++ b/index.html
@@ -48,20 +48,20 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/pic10.jpg" alt="" />
+										<img src="images/cicd-easy-way-with-gitlab5bec5b8a111b6.png" style="width: auto; height: auto;" alt="" />
 									</span>
 								</section>
 
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Configuración para Gitlab</h2>
+										<h2>Resumen de la configuración</h2>
 									</header>
 									<div class="features">
 										<article>
 											<span class="icon fa-diamond"></span>
 											<div class="content">
-												<h3>Primeros pasos...</h3>
+												<h3>Gitlab</h3>
 												<p>Se tiene la configuracion para la comunicacion con jenkins, ya que el flujo debe ser desde la subida de proyecto a git. Al hacer push debe tener la comunicacion para que jenkins capte y comienze el proceso de compilacion y asi mismo pasar por pruebas de calidad.</p>
 											</div>
 										</article>
@@ -69,23 +69,31 @@
 											<span class="icon fa-paper-plane"></span>
 											<div class="content">
 												<h3>Despliegue con jenkins</h3>
-												<p></p>
+												<p>Una vez establecida la conexion de ambos <strong>Jenkins</strong> se encargara de ejecutar el Pipeline construido para cada tipo de proyecto en donde se le indicara sus procesos de compilacion y calificacion para su correcto despliegue.</p>
 											</div>
 										</article>
 										<article>
 											<span class="icon fa-rocket"></span>
 											<div class="content">
-												<h3>Quam lorem ipsum</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>SonarQube</h3>
+												<p>Se encargara de la calificacion de todo este proceso tanto de proyectos Spring, en el cual sera calificado el codigo y en caso de bugs o cualquier percance poder ayudar a mejorar el codigo por medio de este, ahora en caso de pasar las pruebas por default continua su construccion completa y asi cual sea de los casos en diversos lenguajes.</p>
 											</div>
 										</article>
 										<article>
 											<span class="icon fa-signal"></span>
 											<div class="content">
-												<h3>Sed magna finibus</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>Elasticsearch Logstash Kibana</h3>
+												<p>La finalidad del uso de ELK es para checar por medio de Logs, los procesos que va adquiriendo cada App implementada aun que en este caso estara disponible en la mayor parte de la arquitectura, esto para facilitar la visibilidad de estos logs y por si fuera poco se usara la implementacion de filebeat para indexar multiples patterns y visualizar por individual cada proceso que se tenga en proceso.</p>
 											</div>
 										</article>
+                                        
+                                        <header>
+											<h2>Ejemplo de la arquitectura</h2>
+										</header>
+                                        <br/>
+                                            <span class="image object">
+										          <img src="images/Anotaci%C3%B3n%202019-11-29%20102316.png" style="width: auto; height: auto;" alt="" />
+									        </span>
 									</div>
 								</section>
 
@@ -167,7 +175,7 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
+										<!--<li><a href="generic.html">Generic</a></li>
 										<li><a href="elements.html">Elements</a></li>
 										<li>
 											<span class="opener">Submenu</span>
@@ -191,11 +199,11 @@
 										</li>
 										<li><a href="#">Maximus Erat</a></li>
 										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li>
+										<li><a href="#">Amet Lacinia</a></li>-->
 									</ul>
 								</nav>
 
-							<!-- Section -->
+							<!-- Section 
 								<section>
 									<header class="major">
 										<h2>Ante interdum</h2>
@@ -219,17 +227,17 @@
 									</ul>
 								</section>
 
-							<!-- Section -->
+							 Section -->
 								<section>
 									<header class="major">
-										<h2>Get in touch</h2>
+										<h2>Mantente en contacto</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<p></p>
 									<ul class="contact">
-										<li class="fa-envelope-o"><a href="#">information@untitled.tld</a></li>
+										<li class="fa-envelope-o"><a href="#">informacion</a></li>
 										<li class="fa-phone">(000) 000-0000</li>
-										<li class="fa-home">1234 Somewhere Road #8254<br />
-										Nashville, TN 00000-0000</li>
+										<li class="fa-home">Algun lugar<br />
+										</li>
 									</ul>
 								</section>
 
