--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 										</header>
                                         <br/>
                                             <span class="image object">
-										          <img src="images/Anotaci%C3%B3n%202019-11-29%20102316.png" style="width: auto; height: auto;" alt="" />
+										          <img src="images/Anotaci%C3%B3n%202019-11-29%20102316.png" style="width: 100%; height: auto;" alt="" />
 									        </span>
 									</div>
 								</section>
