--- a/index.html
+++ b/index.html
@@ -104,16 +104,16 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-											<h3>Titulo</h3>
+											<a href="/Config-Gitlab.html" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<h3>Gitlab</h3>
 											<p></p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="/Config-Gitlab.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<h3>Titulo</h3>
+											<h3>Jenkins</h3>
 											<p></p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
@@ -121,7 +121,7 @@
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<h3>Titulo</h3>
+											<h3>Nexus</h3>
 											<p></p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
@@ -129,7 +129,7 @@
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3>Titulo</h3>
+											<h3></h3>
 											<p></p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
