--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="/Config-Gitlab.html" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="ConfigGitlab.html" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<h3>Gitlab</h3>
-											<p></p>
+											<p>Configuracion de <strong>Gitlab</strong>.</p>
 											<ul class="actions">
 												<li><a href="/Config-Gitlab.html" class="button">More</a></li>
 											</ul>
@@ -114,7 +114,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<h3>Jenkins</h3>
-											<p></p>
+											<p>Configuracion de <strong>Jenkins</strong>.</p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
 											</ul>
@@ -122,31 +122,31 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<h3>Nexus</h3>
-											<p></p>
+											<p>Configuracion de <strong>Nexus</strong>.</p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3></h3>
-											<p></p>
+											<h3>Elasticsearch & Kibana</h3>
+											<p>Configuracion de <strong>Elasticsearch & kibana</strong>.</p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3>Titulo</h3>
-											<p></p>
+											<h3>Logstash</h3>
+											<p>Configuracion de <strong>Logstash</strong>.</p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3>Titulo</h3>
-											<p></p>
+											<h3>Sonarqube</h3>
+											<p>Configuracion de <strong>Sonarqube</strong>.</p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
 											</ul>
