--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 											<h3>Gitlab</h3>
 											<p>Configuracion de <strong>Gitlab</strong>.</p>
 											<ul class="actions">
-												<li><a href="/Config-Gitlab.html" class="button">More</a></li>
+												<li><a href="ConfigGitlab.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
