Cambio en index4

--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="ConfigJenkins.html" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<h3>Jenkins</h3>
 											<p>Configuracion de <strong>Jenkins</strong>.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="ConfigJenkins.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
