Cambio en index5

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="ConfigGitlab.html" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="ConfigGitlab.html" class="image"><img src="images/50-git_gitlab.png" alt="" /></a>
 											<h3>Gitlab</h3>
 											<p>Configuracion de <strong>Gitlab</strong>.</p>
 											<ul class="actions">
@@ -112,8 +112,10 @@
 											</ul>
 										</article>
 										<article>
-											<a href="ConfigJenkins.html" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<h3>Jenkins</h3>
+                                        <br/>
+											<a href="ConfigJenkins.html" class="image"><img src="images/799px-Jenkins_logo_with_title.svg.png" alt="" /></a>
+											<br/>
+                                            <h3>Jenkins</h3>
 											<p>Configuracion de <strong>Jenkins</strong>.</p>
 											<ul class="actions">
 												<li><a href="ConfigJenkins.html" class="button">More</a></li>
