Cambio en index5

--- a/ConfigJenkins.html
+++ b/ConfigJenkins.html
@@ -37,11 +37,23 @@
 									</header>
 
 									<span class="image main"><img src="images/799px-Jenkins_logo_with_title.svg.png" width="520px" height="auto" alt="" /></span>
-
+                                    <hr class="major" />
+                                    
+                                    <h2>Plugins utilizados</h2>
+									<p>
+                                    <ul>
+                                    	<li>Git</li>
+                                        <li>Gitlab</li>
+                                        <li>Nodejs</li>
+                                        <li>Sonarqube</li>
+                                    </ul>
+                                    </p>
+                                    
 									<hr class="major" />
 
 									<h2>Primeros pasos...</h2>
 									<p>Al acceder a Jenkins, una vez teniendo en mano el acces token que se genero desde <strong>Gitlab</strong> es necesario agregar la credencial de acceso para su exitosa comunicación y de esta manera lograr la conexión de ambos. De esta manera sera agregada esta configuracion tal cual lo muestran las imagenes siguientes...</p>
+                                    <p>Nos dirigimos al apartado de credenciales</p>
                                     <span class="image">
                                     <img src="images/1490713862_55_GitLab-Jenkins-una-integración-de-gran-alcance.png" width="100%" height="auto" />
                                     </span>
