--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/son-logo-main-2x-2.png" alt="" /></a>
 											<h3>Nexus</h3>
 											<p>Configuracion de <strong>Nexus</strong>.</p>
 											<ul class="actions">
