--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Introducción a la
-											Arquitectura de integración</h1>
+											<h1>Arquitectura de integración Continua</h1>
 											<p>En esta seccion checaremos el flujo<br /> para una integracion completa</p>
 										</header>
 										<p>Desde un inicio sera necesaria la utilidad de una serie de herramientas para la cracion de esta misma, como lo es Gitlab, Jenkins, Nexus, Sonarqube, ELK, etc... <br/>
@@ -139,7 +138,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/DV-SonarQube (1).png" alt="" /></a>
 											<h3>Sonarqube</h3>
 											<p>Configuracion de <strong>Sonarqube</strong>.</p>
 											<ul class="actions">
@@ -147,7 +146,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/portainer-logo.png" alt="" /></a>
 											<h3>Portainer</h3>
 											<p>Configuracion de <strong>Logstash</strong>.</p>
 											<ul class="actions">
