--- a/index.html
+++ b/index.html
@@ -121,36 +121,36 @@
 											</ul>
 										</article>
 										<article>
-											<a href="ConfigSonarqube.html" class="image"><img src="images/son-logo-main-2x-2.png" alt="" /></a>
+											<a href="ConfigNexus.html" class="image"><img src="images/son-logo-main-2x-2.png" alt="" /></a>
 											<h3>Nexus</h3>
 											<p>Configuracion de <strong>Sonatype Nexus 3</strong>.</p>
 											<ul class="actions">
-												<li><a href="ConfigSonarqube.html" class="button">More</a></li>
+												<li><a href="ConfigNexus.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
 											<br/>
-											<a href="#" class="image"><img src="images/elk.png" alt="" /></a>
-											<h3>Elasticsearch & Kibana</h3>
-											<p>Configuracion de <strong>Elasticsearch, Logstash & kibana</strong>.</p>
+											<a href="elkb.html" class="image"><img src="images/elk.png" alt="" /></a>
+											<h3>Elasticsearch, Logstash & kibana - Beats</h3>
+											<p>Configuracion de <strong>Elasticsearch, Logstash & kibana - Beats</strong>.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="elkb.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/DV-SonarQube (1).png" alt="" /></a>
+											<a href="Sonarqube.html" class="image"><img src="images/DV-SonarQube (1).png" alt="" /></a>
 											<h3>Sonarqube</h3>
 											<p>Configuracion de <strong>Sonarqube</strong>.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="Sonarqube.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/portainer-logo.png" alt="" /></a>
+											<a href="Portainer.html" class="image"><img src="images/portainer-logo.png" alt="" /></a>
 											<h3>Portainer</h3>
 											<p>Configuracion de <strong>Logstash</strong>.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="Portainer.html" class="button">More</a></li>
 											</ul>
 										</article>
 									</div>
