--- a/Portainer.html
+++ b/Portainer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Configuracion-Gitlab</title>
+		<title>Portainer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -20,7 +20,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Configuracion Gitlab</strong></a>
+									<a href="index.html" class="logo"><strong>Portainer administrador de Docker</strong></a>
 									<ul class="icons">
 										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
@@ -33,17 +33,19 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Gitlab Config.</h1>
+										<h1>Portainer.io</h1>
 									</header>
 
-									<span class="image main"><img src="images/50-git_gitlab.png" width="520px" height="auto" alt="" /></span>
+									<span class="image main"><img src="images/portainer-logo.png" width="520px" height="auto" alt="" /></span>
 
 									<hr class="major" />
 
-									<h2>Primeros pasos...</h2>
-									<p>Al acceder a Gitlab, es necesario agregar configuraciones desde el dashboard para habilitar la comunicacion desde que se produce un commit jenkins comienza a trabajar depende el <strong>Pipeline</strong> que se asigne a cada proyecto para llevar acabo sus procesos desde la construccion de los Jar con maven al igual que la construccion de una imagen docker de el mismo o puede ser algun otro trabajo en otro lenguaje soportado por jenkins.</p>
+									<h2>Administrador.</h2>
+									<p><strong>Portainer.io</strong> es un administrador para <strong>Docker</strong> que funciona para gestionar las imagenes 
+									obtenidas, realizar la mayor parte de comandos de manera gráfica. 
+									</p>
                                     <span class="image">
-                                    <img src="images/1490713855_686_GitLab-Jenkins-una-integración-de-gran-alcance.png" width="100%" height="auto" />
+                                    <img src="images/portainer/Selección_010.png" width="100%" height="auto" />
                                     </span>
                                     
 									<hr class="major" />
