--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Beinvenidos,</strong> Banco Azteca - Torre Jade CI/CD </a>
+									<a href="index.html" class="logo"><strong>Bienvenidos,</strong> Banco Azteca - Torre Jade CI/CD </a>
 									
 									<ul class="icons">
 										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
