--- a/Portainer.html
+++ b/Portainer.html
@@ -84,6 +84,10 @@
                                     <img src="images/portainer/Selección_015.png" width="100%" height="auto" />
                                     </span>
 
+                                    <p>Aqui podemos indicar el usuario con el que queremos entrar pero en caso de no simplemente puedes acceder
+                                    con un usuario por default o en su defecto simplemente escribiendo root de esta manera tendremos control absoluto.
+                                    </p>
+
 									<hr class="major" />
 
 								</section>
