--- a/Portainer.html
+++ b/Portainer.html
@@ -88,6 +88,29 @@
                                     con un usuario por default o en su defecto simplemente escribiendo root de esta manera tendremos control absoluto.
                                     </p>
 
+                                    <span class="image">
+                                    <img src="images/portainer/Selección_016.png" width="100%" height="auto" />
+                                    </span>
+
+                                    <p>Para salir simplemente dando clic en Disconnect</p>
+
+                                    <hr class="major" />
+
+                                    <h2>Logs</h2>
+                                    <p>Otro de los puntos a favor es la capacidad de mostrar logs en una pantalla distinta, sencillamente dando un clic en el icono de la hoja.</p>
+
+                                    <span class="image">
+                                    <img src="images/portainer/Selección_017.png" width="100%" height="auto" />
+                                    </span>
+
+                                    <br/>
+
+                                    <h2>Status Docker Images</h2>
+                                    <p>Tambien es importante mencionar el monitoreo de las imagenes docker que tengamos en funcion, sean locales o remotas</p>
+                                    <span class="image">
+                                    <img src="images/portainer/Selección_018.png" width="100%" height="auto" />
+                                    </span>
+
 									<hr class="major" />
 
 								</section>
