--- a/index.html
+++ b/index.html
@@ -182,10 +182,11 @@
 										<li>
 											<span class="opener">Entrar a Portales CI|CD</span>
 											<ul>
-												<li><a href="http://10.51.251.148:9000">Portainer</a></li>
-												<li><a href="http://10.51.251.148:8081">Sonatype Nexus</a></li>
-												<li><a href="http://10.51.251.148:8080">Jenkins</a></li>
-												<li><a href="http://10.51.251.150:9997">Gitlab</a></li>
+												<li><a href="http://10.51.251.49:8080" target="_blank">Jenkins</a></li>
+												<li><a href="http://10.51.251.49:8081" target="_blank">Sonatype Nexus</a></li>
+												<li><a href="http://10.51.251.150:9997" target="_blank">Gitlab</a></li>
+												<li><a href="http://10.51.251.49:9000" target="_blank">Sonarqube</a></li>
+												<li><a href="http://10.51.251.49:9010" target="_blank">Portainer</a></li>
 											</ul>
 										</li>
 									</ul>
