--- a/ConfigJenkins.html
+++ b/ConfigJenkins.html
@@ -36,8 +36,18 @@
 										<h1>Jenkins Config.</h1>
 									</header>
 
+
+
 									<span class="image main"><img src="images/799px-Jenkins_logo_with_title.svg.png" width="520px" height="auto" alt="" /></span>
-                                    <hr class="major" />
+
+									<hr class="major" />
+
+									<h2>Instalación</h2>
+									<p>Fedora:</p>
+									<p>yum update</p>
+									<p>yum install jenkins</p>
+
+									<hr class="major" />
                                     
                                     <h2>Plugins utilizados</h2>
 									<p>
