--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Inicio</a></li>
-										<li><a href="#">Manual completo</a></li>
+										<li><a href="#">Manual completo PDF</a></li>
 										<li>
 											<span class="opener">Entrar a Portales CI|CD</span>
 											<ul>
