--- a/ConfigJenkins.html
+++ b/ConfigJenkins.html
@@ -281,7 +281,7 @@
 									
 									<p>Una vez hecho un push comenzara a ejecutar los pasos establecidos en el Jenkinsfile si es todo correcto pintara el Stage View en verde pero en caso de algun fallo debera mandarlo de color Rojo.</p>
 									<span class="image">
-										<img src="images/captura.png" width="100%" height="auto" />
+										<img src="images/stages.PNG" width="100%" height="auto" />
 									</span>
 
 								</section>
