--- a/ConfigJenkins.html
+++ b/ConfigJenkins.html
@@ -142,12 +142,14 @@
 										node {
 
 											<br/><br/>
+											/*Se define el nombre y version de la aplicacion para docker*/<br/>
+
 											def pom = readMavenPom file: 'pom.xml'<br/>
 											def developmentArtifactVersion = "${pom.version}"<br/>
 											def jarName = "${pom.name}"<br/>
 											def cleanVersion=developmentArtifactVersion.replaceAll("-SNAPSHOT","");<br/><br/>
-											
-											"$jarName" <br/><br/>
+											/* Se imprime el nombre con el que se realizara un Tag */
+											echo "$jarName" <br/><br/>
 											
 											jdk = tool name: 'JDK_11'<br/>
 											env.JAVA_HOME = "${jdk}"<br/>
