--- a/ConfigJenkins.html
+++ b/ConfigJenkins.html
@@ -142,7 +142,7 @@
 										node {
 
 											<br/><br/>
-											/*Se define el nombre y version de la aplicacion para docker*/<br/>
+											<p>/*Se define el nombre y version de la aplicacion para docker*/</p><br/>
 
 											def pom = readMavenPom file: 'pom.xml'<br/>
 											def developmentArtifactVersion = "${pom.version}"<br/>
@@ -150,7 +150,8 @@
 											def cleanVersion=developmentArtifactVersion.replaceAll("-SNAPSHOT","");<br/><br/>
 											/* Se imprime el nombre con el que se realizara un Tag */<br/><br/>
 											echo "$jarName" <br/><br/>
-											
+
+											/* Se define en este caso la version de Java para el proyecto *<br/><br/>
 											jdk = tool name: 'JDK_11'<br/>
 											env.JAVA_HOME = "${jdk}"<br/>
 											echo "jdk installation path is: ${jdk}"<br/>
