--- a/ConfigJenkins.html
+++ b/ConfigJenkins.html
@@ -142,7 +142,7 @@
 										node {
 
 											<br/><br/>
-											<p>/*Se define el nombre y version de la aplicacion para docker*/</p><br/>
+											<p><strong>/*Se define el nombre y version de la aplicacion para docker*/</strong></p><br/>
 
 											def pom = readMavenPom file: 'pom.xml'<br/>
 											def developmentArtifactVersion = "${pom.version}"<br/>
