--- a/ConfigJenkins.html
+++ b/ConfigJenkins.html
@@ -142,13 +142,15 @@
 										node {
 
 											<br/><br/>
-											<p><strong>/*Se define el nombre y version de la aplicacion para docker*/</strong></p><br/>
+											<h2>/*Se define el nombre y version de la aplicacion para docker*/</h2>
 
 											def pom = readMavenPom file: 'pom.xml'<br/>
 											def developmentArtifactVersion = "${pom.version}"<br/>
 											def jarName = "${pom.name}"<br/>
 											def cleanVersion=developmentArtifactVersion.replaceAll("-SNAPSHOT","");<br/><br/>
+
 											/* Se imprime el nombre con el que se realizara un Tag */<br/><br/>
+											
 											echo "$jarName" <br/><br/>
 
 											/* Se define en este caso la version de Java para el proyecto *<br/><br/>
