--- a/ConfigJenkins.html
+++ b/ConfigJenkins.html
@@ -209,6 +209,8 @@
 
 						if (dev != 1) {<br />
 
+							<h4>Desde Aqui Comienza los escenarios para Productivo</h4>
+
 						echo "Produccion Stages..."<br /><br />
 
 						stage('Iniciando Ejecución'){<br /><br />
@@ -267,6 +269,8 @@
 						}<br /><br />
 
 						} else {<br /><br />
+
+							<h4>Desde Aqui Comienza los escenarios para Desarrollo el cual Inhabilita algunos escenarios</h4>
 
 						echo "Develoop Stages..."<br /><br />
 
