--- a/ConfigJenkins.html
+++ b/ConfigJenkins.html
@@ -270,7 +270,7 @@
 
 						} else {<br /><br />
 
-							<h4>Desde Aqui Comienza los escenarios para Desarrollo el cual Inhabilita algunos escenarios</h4>
+							<h4>/* Desde Aqui Comienza los escenarios para Desarrollo el cual Inhabilita algunos escenarios*/</h4>
 
 						echo "Develoop Stages..."<br /><br />
 
