--- a/ConfigGitlab.html
+++ b/ConfigGitlab.html
@@ -33,10 +33,13 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Gitlab Config.</h1>
+										<table>
+											<tr>
+												<td align="center"><img src="images/50-git_gitlab.png" width="320px" alt="" /></td>
+											</tr>
+										</table>
+										
 									</header>
-
-									<span class="image main"><img src="images/50-git_gitlab.png" width="520px" height="auto" alt="" /></span>
 
 									<hr class="major" />
 
@@ -84,14 +87,9 @@
 								</section>
 
 							<!-- Menu -->
-								<nav id="menu">
-									<header class="major">
-										<h2>Menu</h2>
-									</header>
-									<ul>
-										<li><a href="index.html">Inicio</a></li>
-									</ul>
-								</nav>
+							<header class="major">
+								<h2><a href="index.html">Regresar</a></h2>
+							</header>
 
 							<!-- Section -->
 								<section>
