--- a/ConfigJenkins.html
+++ b/ConfigJenkins.html
@@ -35,20 +35,20 @@
 				<!-- Content -->
 				<section>
 					<header class="main">
-						<h1>Jenkins Config.</h1>
+						<table>
+							<tr>
+								<td align="center"><img src="images/799px-Jenkins_logo_with_title.svg.png" width="220px" height="auto" alt="" /></td>
+							</tr>
+						</table>
+						
 					</header>
-
-
-
-					<span class="image main"><img src="images/799px-Jenkins_logo_with_title.svg.png" width="520px"
-							height="auto" alt="" /></span>
 
 					<hr class="major" />
 
 					<h2>Instalación</h2>
 					<p>Fedora:</p>
-					<p>yum update</p>
-					<p>yum install jenkins</p>
+					<p>$ yum update</p>
+					<p>$ yum install jenkins</p>
 
 					<hr class="major" />
 
@@ -162,13 +162,14 @@
 							background: #262720;
 							-webkit-border-radius: 15px;
 							border-radius: 15px;
-							padding: 8px;
+							padding: 5px;
 							font-size: small;
 							color: #fff;
 							overflow: auto;
 							width: 100%;
-							max-width: 1200px;
+							max-width: 100%;
 							height: 100%;
+							font-size: medium;
 						}
 
 						#pre .kw1,
@@ -185,11 +186,11 @@
 						}
 
 						#pre .st0 {
-							color: darkcyan;
+							color: lawngreen;
 						}
 
 						#pre .par {
-							color: red;
+							color:magenta;
 						}
 					</style>
 
@@ -496,14 +497,10 @@
 				</section>
 
 				<!-- Menu -->
-				<nav id="menu">
 					<header class="major">
-						<h2>Menu</h2>
+						<h2><a href="index.html">Regresar</a></h2>
 					</header>
-					<ul>
-						<li><a href="index.html">Inicio</a></li>
-					</ul>
-				</nav>
+				
 
 				<section>
 					<header class="major">
