--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 											<h3>Gitlab</h3>
 											<p>Configuracion de <strong>Gitlab</strong>.</p>
 											<ul class="actions">
-												<li><a href="ConfigGitlab.html" class="button">More</a></li>
+												<li><a href="ConfigGitlab.html" class="button">Entrar</a></li>
 											</ul>
 										</article>
 										<article>
@@ -117,7 +117,7 @@
                                             <h3>Jenkins</h3>
 											<p>Configuracion de <strong>Jenkins</strong>.</p>
 											<ul class="actions">
-												<li><a href="ConfigJenkins.html" class="button">More</a></li>
+												<li><a href="ConfigJenkins.html" class="button">Entrar</a></li>
 											</ul>
 										</article>
 										<article>
@@ -125,7 +125,7 @@
 											<h3>Nexus</h3>
 											<p>Configuracion de <strong>Sonatype Nexus 3</strong>.</p>
 											<ul class="actions">
-												<li><a href="ConfigNexus.html" class="button">More</a></li>
+												<li><a href="ConfigNexus.html" class="button">Entrar</a></li>
 											</ul>
 										</article>
 										<article>
@@ -134,7 +134,7 @@
 											<h3>Elasticsearch, Logstash & kibana - Beats</h3>
 											<p>Configuracion de <strong>Elasticsearch, Logstash & kibana - Beats</strong>.</p>
 											<ul class="actions">
-												<li><a href="elkb.html" class="button">More</a></li>
+												<li><a href="elkb.html" class="button">Entrar</a></li>
 											</ul>
 										</article>
 										<article>
@@ -142,7 +142,7 @@
 											<h3>Sonarqube</h3>
 											<p>Configuracion de <strong>Sonarqube</strong>.</p>
 											<ul class="actions">
-												<li><a href="Sonarqube.html" class="button">More</a></li>
+												<li><a href="Sonarqube.html" class="button">Entrar</a></li>
 											</ul>
 										</article>
 										<article>
@@ -150,7 +150,7 @@
 											<h3>Portainer</h3>
 											<p>Configuracion de <strong>Logstash</strong>.</p>
 											<ul class="actions">
-												<li><a href="Portainer.html" class="button">More</a></li>
+												<li><a href="Portainer.html" class="button">Entrar</a></li>
 											</ul>
 										</article>
 									</div>
@@ -211,7 +211,7 @@
 										</article>
 									</div>
 									<ul class="actions">
-										<li><a href="#" class="button">More</a></li>
+										<li><a href="#" class="button">Entrar</a></li>
 									</ul>
 								</section>
 
