--- a/ConfigJenkins.html
+++ b/ConfigJenkins.html
@@ -35,7 +35,7 @@
 				<!-- Content -->
 				<section>
 					<header class="main">
-						<table>
+						<table style="width: 100%;">
 							<tr>
 								<td align="center"><img src="images/799px-Jenkins_logo_with_title.svg.png" width="320px" height="auto" alt="" /></td>
 							</tr>
@@ -78,7 +78,7 @@
 
 					<h2>Plugins utilizados</h2>
 
-					<table>
+					<table style="width: 100%;">
 						<tbody>
 							<tr>
 								<td>Git Plugin</td>
